# Civic-Issue-Reporting-System

./: LICENSE  README.md
meghana coding/SIH/: .gitignore  README.md  TODO.md  add_media_column.py  add_photo_column.py  add_short_description.py  add_user_migration.py  app.py  app_backup.py  check_existing_reports.py  complete_flask_app_structure.md  drop_location_column.py  geocoding.py  hackathon  init_db.py  migrate_db.py  models.py  pyproject.toml  rebuild_database.py  reset_database.py  reset_database_fixed.py  test_all_timestamps.py  test_app.py  test_critical_path.py  test_db.py  test_query.py  test_timestamps.py  update_columns_nullable.py  update_timestamps.py  utils.py
meghana coding/SIH/full_flask_app/: app.py
meghana coding/SIH/full_flask_app/templates/: admin.html  admin_report_detail.html  home.html  notifications.html  onetimepassword.html  register.html  submit_report.html
meghana coding/SIH/migrations/versions/: 2aa3523d58c0_initial_migration.py  add_otp_created_at_column.py  update_timestamps_to_ist.py
meghana coding/SIH/static/css/: premium.css
meghana coding/SIH/static/uploads/: black__white.avif
meghana coding/SIH/templates/: admin.html  admin_enhanced.html  admin_enhanced_fixed.html  admin_fixed.html  admin_new.html  admin_report_detail.html  home.html  home_fixed.html  index.html  language_switcher.html  onetimepassword.html  register.html  status.html  submit.html  submit_report.html  submit_report_backup.html  submit_report_enhanced.html  submit_report_fixed.html
meghana coding/SIH/translations/hi/LC_MESSAGES/: messages.po
(+1 files in other folders)
