[project]
name = "sih"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-babel>=4.0.0",
    "requests>=2.31.0",
    "pytz>=2024.1",
]

[tool.setuptools.packages.find]
exclude = ["static", "instance", "templates"]
